--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,14 +2,11 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_path(task) %>
-      <% if task.completed%>
-      <p>✅</p>
-      <% else %>
-        <p>🗒️</p>
-      <% end %>
+    <li>
+      <%= check_box_tag "completed []", task.id, task.completed %>
+      <%= link_to task.title, task_path(task) %>
     </li>
   <% end %>
 </ul>
-
+<br>
 <%= link_to "➕ Add new task", new_task_path %>
